integrated polling configurations

--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://bots.kore.ai/chatbot/v2/webhook/st-969e6350-0439-5958-a697-d239ec90c45b"
+  "proxy": "https://cai-xo-10-bot-react-integrate.onrender.com"
 }
